--- a/app/src/main/res/layout/activity_viewproducts.xml
+++ b/app/src/main/res/layout/activity_viewproducts.xml
@@ -10,6 +10,7 @@
 
     <ListView
         android:id="@+id/mListProducts"
+        android:background="@drawable/kdfnh"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 </LinearLayout>
